# pitchfork-template

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Component_8hpp_source.html  LICENSE  PublicComponent_8hpp_source.html  README.md  SubComponent_8hpp_source.html  TestComponentaa_8hpp_source.html  annotated.html  annotated_dup.js  classComponent-members.html  classComponent.html  classNamespace_1_1SubComponent-members.html  classNamespace_1_1SubComponent.html  classes.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_66caacebe52e7c52f7d71cc7865ceb35.html  dir_66caacebe52e7c52f7d71cc7865ceb35.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b1ee6163541b80a792b8f92eb088ab13.html  dir_b1ee6163541b80a792b8f92eb088ab13.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: ci.yml  doxygen.yml  linux_tests.yml  windows_tests.yml
docs/: Doxyfile
search/: all_1.js
src/: Component.cpp  Component.hpp
src/main/: main.cpp
src/namespace/: SubComponent.cpp  SubComponent.hpp
tests/: Component.test.cpp
tests/namespace/: SubComponent.test.cpp
tools/: build_project_Release.bat  clean.bat  default_profile_generate.bat  generate_docs.bat  generate_project.bat
